--- a/data_structure/splay_tree_array.html
+++ b/data_structure/splay_tree_array.html
@@ -77,7 +77,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../math/index.html"><strong aria-hidden="true">1.</strong> Math</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../math/matrix.html"><strong aria-hidden="true">1.1.</strong> Matrix</a></li><li class="chapter-item expanded "><a href="../math/modint.html"><strong aria-hidden="true">1.2.</strong> Modint</a></li></ol></li><li class="chapter-item expanded "><a href="../data_structure/index.html"><strong aria-hidden="true">2.</strong> Data Structure</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../data_structure/segment_tree.html"><strong aria-hidden="true">2.1.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../data_structure/splay_tree_array.html" class="active"><strong aria-hidden="true">2.2.</strong> Splay Tree Array</a></li><li class="chapter-item expanded "><a href="../data_structure/sparse_table.html"><strong aria-hidden="true">2.3.</strong> Sparse Table</a></li><li class="chapter-item expanded "><a href="../data_structure/union_find.html"><strong aria-hidden="true">2.4.</strong> Union Find</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introduction</a></li><li class="chapter-item expanded "><a href="../math/index.html"><strong aria-hidden="true">1.</strong> Math</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../math/matrix.html"><strong aria-hidden="true">1.1.</strong> Matrix</a></li><li class="chapter-item expanded "><a href="../math/modint.html"><strong aria-hidden="true">1.2.</strong> Modint</a></li></ol></li><li class="chapter-item expanded "><a href="../data_structure/index.html"><strong aria-hidden="true">2.</strong> Data Structure</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../data_structure/splay_tree_array.html" class="active"><strong aria-hidden="true">2.1.</strong> Splay Tree Array</a></li><li class="chapter-item expanded "><a href="../data_structure/segment_tree.html"><strong aria-hidden="true">2.2.</strong> Segment Tree</a></li><li class="chapter-item expanded "><a href="../data_structure/union_find.html"><strong aria-hidden="true">2.3.</strong> Union Find</a></li><li class="chapter-item expanded "><a href="../data_structure/sparse_table.html"><strong aria-hidden="true">2.4.</strong> Sparse Table</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -403,116 +403,6 @@ std::shared_ptr&lt;StaNode&lt;T&gt;&gt; root;
 SplayTreeArray(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; root):root(root) { }
 SplayTreeArray(SplayTreeArray&lt;T, std::enable_if_t&lt;std::conjunction_v&lt;Monoid&lt;T&gt;&gt;&gt;&gt;&amp;&amp; right) = default;
 SplayTreeArray&lt;T, std::enable_if_t&lt;std::conjunction_v&lt;Monoid&lt;T&gt;&gt;&gt;&gt;&amp; operator=(SplayTreeArray&lt;T, std::enable_if_t&lt;std::conjunction_v&lt;Monoid&lt;T&gt;&gt;&gt;&gt;&amp;&amp; right) = default;
-static std::shared_ptr&lt;StaNode&lt;T&gt;&gt; merge_(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; l, std::shared_ptr&lt;StaNode&lt;T&gt;&gt; r) {
-if(!(bool)(l)) {
- l = std::move(r);
-}
-else if((bool)(r)) {
- l = SplayTreeArray&lt;T&gt;::find_(l, node_size&lt;T&gt;(l)-1ull);
-SplayTreeArray&lt;T&gt;::set(l, 1ull, std::move(r));
-}
-;
-return l;
-}
-
-static void rotate(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; const&amp; x, unsigned long long dir) {
-std::shared_ptr&lt;StaNode&lt;T&gt;&gt; p = (*x).parent.lock();
-std::shared_ptr&lt;StaNode&lt;T&gt;&gt; q = (*p).parent.lock();
-SplayTreeArray&lt;T&gt;::set(p, dir^1ull, StaNode&lt;T&gt;::child((*x), dir));
-unsigned long long p_dir = SplayTreeArray&lt;T&gt;::parent_dir(p);
-if(p_dir != 2ull) {
- SplayTreeArray&lt;T&gt;::set(q, p_dir, x);
-}
-else {
-(*x).parent = std::weak_ptr&lt;StaNode&lt;T&gt;&gt;();
-}
-;
-SplayTreeArray&lt;T&gt;::set(x, dir, std::move(p));
-}
-
-static std::shared_ptr&lt;StaNode&lt;T&gt;&gt; set(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; const&amp; par, unsigned long long dir, std::shared_ptr&lt;StaNode&lt;T&gt;&gt; new_ch) {
-if((bool)(new_ch)) {
- (*new_ch).parent = std::weak_ptr&lt;StaNode&lt;T&gt;&gt;(par);
-}
-;
-if(dir == 0ull) {
- std::swap((*par).left, new_ch);
-}
-else {
-std::swap((*par).right, new_ch);
-}
-;
-StaNode&lt;T&gt;::fix((*par));
-return new_ch;
-}
-
-static SplayTreeArray&lt;T&gt; empty(T t) {
-return SplayTreeArray&lt;T&gt;(std::shared_ptr&lt;StaNode&lt;T&gt;&gt;());
-}
-
-static std::tuple&lt;SplayTreeArray&lt;T&gt;, SplayTreeArray&lt;T&gt;&gt; split(SplayTreeArray&lt;T&gt; self, unsigned long long i) {
-auto [l, r] = SplayTreeArray&lt;T&gt;::split_(std::move(self.root), i);
-return std::tuple&lt;SplayTreeArray&lt;T&gt;, SplayTreeArray&lt;T&gt;&gt;{ SplayTreeArray&lt;T&gt;(std::move(l)), SplayTreeArray&lt;T&gt;(std::move(r)) };
-}
-
-static unsigned long long size(SplayTreeArray&lt;T&gt; const&amp; self) {
-return node_size&lt;T&gt;(self.root);
-}
-
-static T fold(SplayTreeArray&lt;T&gt; const&amp; self) {
-return node_fold&lt;T&gt;(self.root);
-}
-
-static std::shared_ptr&lt;StaNode&lt;T&gt;&gt; find_(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; const&amp; x, unsigned long long i) {
-std::shared_ptr&lt;StaNode&lt;T&gt;&gt; z = x;
-for(unsigned long long cnt = 0ull; (bool)(z); cnt = cnt+1ull){
-unsigned long long left_size = node_size&lt;T&gt;((*z).left);
-if(left_size == i) {
-SplayTreeArray&lt;T&gt;::splay(z);
-break;
-}
-else if(left_size &lt; i) {
-i = i-(left_size+1ull);
-z = (*z).right;
-}
-else {
-z = (*z).left;
-}
-;
-};
-return z;
-}
-
-static SplayTreeArray&lt;T&gt; merge(SplayTreeArray&lt;T&gt; self, SplayTreeArray&lt;T&gt; right) {
-return SplayTreeArray&lt;T&gt;(SplayTreeArray&lt;T&gt;::merge_(std::move(self.root), std::move(right.root)));
-}
-
-static T const&amp; get(SplayTreeArray&lt;T&gt;&amp; self, unsigned long long i) {
-self.root = SplayTreeArray&lt;T&gt;::find_(self.root, i);
-return (*self.root).val;
-}
-
-static SplayTreeArray&lt;T&gt; once(T t) {
-return SplayTreeArray&lt;T&gt;(std::shared_ptr&lt;StaNode&lt;T&gt;&gt;(new StaNode&lt;T&gt;(StaNode&lt;T&gt;::init(std::move(t)))));
-}
-
-static unsigned long long parent_dir(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; const&amp; node) {
-std::shared_ptr&lt;StaNode&lt;T&gt;&gt; par = (*node).parent.lock();
-if((bool)(par)) {
-if((*par).left == node) {
-return 0ull;
-}
-else {
-return 1ull;
-}
-;
-}
-else {
-return 2ull;
-}
-;
-}
-
 static void splay(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; const&amp; x) {
 if((bool)(x)) {
 for(unsigned long long i = 0ull; !(*x).parent.expired(); i = i+1ull){
@@ -535,6 +425,62 @@ SplayTreeArray&lt;T&gt;::rotate(x, eir^1ull);
 ;
 }
 
+static void rotate(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; const&amp; x, unsigned long long dir) {
+std::shared_ptr&lt;StaNode&lt;T&gt;&gt; p = (*x).parent.lock();
+std::shared_ptr&lt;StaNode&lt;T&gt;&gt; q = (*p).parent.lock();
+SplayTreeArray&lt;T&gt;::set(p, dir^1ull, StaNode&lt;T&gt;::child((*x), dir));
+unsigned long long p_dir = SplayTreeArray&lt;T&gt;::parent_dir(p);
+if(p_dir != 2ull) {
+ SplayTreeArray&lt;T&gt;::set(q, p_dir, x);
+}
+else {
+(*x).parent = std::weak_ptr&lt;StaNode&lt;T&gt;&gt;();
+}
+;
+SplayTreeArray&lt;T&gt;::set(x, dir, std::move(p));
+}
+
+static SplayTreeArray&lt;T&gt; empty(T t) {
+return SplayTreeArray&lt;T&gt;(std::shared_ptr&lt;StaNode&lt;T&gt;&gt;());
+}
+
+static std::tuple&lt;SplayTreeArray&lt;T&gt;, SplayTreeArray&lt;T&gt;&gt; split(SplayTreeArray&lt;T&gt; self, unsigned long long i) {
+auto [l, r] = SplayTreeArray&lt;T&gt;::split_(std::move(self.root), i);
+return std::tuple&lt;SplayTreeArray&lt;T&gt;, SplayTreeArray&lt;T&gt;&gt;{ SplayTreeArray&lt;T&gt;(std::move(l)), SplayTreeArray&lt;T&gt;(std::move(r)) };
+}
+
+static SplayTreeArray&lt;T&gt; once(T t) {
+return SplayTreeArray&lt;T&gt;(std::shared_ptr&lt;StaNode&lt;T&gt;&gt;(new StaNode&lt;T&gt;(StaNode&lt;T&gt;::init(std::move(t)))));
+}
+
+static SplayTreeArray&lt;T&gt; merge(SplayTreeArray&lt;T&gt; self, SplayTreeArray&lt;T&gt; right) {
+return SplayTreeArray&lt;T&gt;(SplayTreeArray&lt;T&gt;::merge_(std::move(self.root), std::move(right.root)));
+}
+
+static unsigned long long size(SplayTreeArray&lt;T&gt; const&amp; self) {
+return node_size&lt;T&gt;(self.root);
+}
+
+static T fold(SplayTreeArray&lt;T&gt; const&amp; self) {
+return node_fold&lt;T&gt;(self.root);
+}
+
+static std::shared_ptr&lt;StaNode&lt;T&gt;&gt; set(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; const&amp; par, unsigned long long dir, std::shared_ptr&lt;StaNode&lt;T&gt;&gt; new_ch) {
+if((bool)(new_ch)) {
+ (*new_ch).parent = std::weak_ptr&lt;StaNode&lt;T&gt;&gt;(par);
+}
+;
+if(dir == 0ull) {
+ std::swap((*par).left, new_ch);
+}
+else {
+std::swap((*par).right, new_ch);
+}
+;
+StaNode&lt;T&gt;::fix((*par));
+return new_ch;
+}
+
 static std::tuple&lt;std::shared_ptr&lt;StaNode&lt;T&gt;&gt;, std::shared_ptr&lt;StaNode&lt;T&gt;&gt;&gt; split_(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; x, unsigned long long i) {
 if(i == 0ull) {
 return std::tuple&lt;std::shared_ptr&lt;StaNode&lt;T&gt;&gt;, std::shared_ptr&lt;StaNode&lt;T&gt;&gt;&gt;{ std::shared_ptr&lt;StaNode&lt;T&gt;&gt;(), std::move(x) };
@@ -546,6 +492,60 @@ else {
 std::shared_ptr&lt;StaNode&lt;T&gt;&gt; l = SplayTreeArray&lt;T&gt;::find_(x, i-1ull);
 std::shared_ptr&lt;StaNode&lt;T&gt;&gt; r = SplayTreeArray&lt;T&gt;::set(l, 1ull, std::shared_ptr&lt;StaNode&lt;T&gt;&gt;());
 return std::tuple&lt;std::shared_ptr&lt;StaNode&lt;T&gt;&gt;, std::shared_ptr&lt;StaNode&lt;T&gt;&gt;&gt;{ std::move(l), std::move(r) };
+}
+;
+}
+
+static T const&amp; get(SplayTreeArray&lt;T&gt;&amp; self, unsigned long long i) {
+self.root = SplayTreeArray&lt;T&gt;::find_(self.root, i);
+return (*self.root).val;
+}
+
+static std::shared_ptr&lt;StaNode&lt;T&gt;&gt; find_(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; const&amp; x, unsigned long long i) {
+std::shared_ptr&lt;StaNode&lt;T&gt;&gt; z = x;
+for(unsigned long long cnt = 0ull; (bool)(z); cnt = cnt+1ull){
+unsigned long long left_size = node_size&lt;T&gt;((*z).left);
+if(left_size == i) {
+SplayTreeArray&lt;T&gt;::splay(z);
+break;
+}
+else if(left_size &lt; i) {
+i = i-(left_size+1ull);
+z = (*z).right;
+}
+else {
+z = (*z).left;
+}
+;
+};
+return z;
+}
+
+static std::shared_ptr&lt;StaNode&lt;T&gt;&gt; merge_(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; l, std::shared_ptr&lt;StaNode&lt;T&gt;&gt; r) {
+if(!(bool)(l)) {
+ l = std::move(r);
+}
+else if((bool)(r)) {
+ l = SplayTreeArray&lt;T&gt;::find_(l, node_size&lt;T&gt;(l)-1ull);
+SplayTreeArray&lt;T&gt;::set(l, 1ull, std::move(r));
+}
+;
+return l;
+}
+
+static unsigned long long parent_dir(std::shared_ptr&lt;StaNode&lt;T&gt;&gt; const&amp; node) {
+std::shared_ptr&lt;StaNode&lt;T&gt;&gt; par = (*node).parent.lock();
+if((bool)(par)) {
+if((*par).left == node) {
+return 0ull;
+}
+else {
+return 1ull;
+}
+;
+}
+else {
+return 2ull;
 }
 ;
 }
@@ -638,10 +638,10 @@ std::cout &lt;&lt; SplayTreeArray&lt;unsigned long long&gt;::fold(t0) &lt;&lt; s
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../data_structure/segment_tree.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../data_structure/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="../data_structure/sparse_table.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../data_structure/segment_tree.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -650,10 +650,10 @@ std::cout &lt;&lt; SplayTreeArray&lt;unsigned long long&gt;::fold(t0) &lt;&lt; s
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../data_structure/segment_tree.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../data_structure/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="../data_structure/sparse_table.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../data_structure/segment_tree.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
